ExaOne 모델 추가 및 AWS Bedrock을 통한 Claude Sonnet 3.5 지원 추가

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# LLM 제공자 설정 (openai, anthropic, localai, bedrock 중 선택)
+# LLM 제공자 설정 (openai, anthropic, claude-bedrock, local_ai, exaone 중 선택)
 LLM_PROVIDER=openai
 
 # OpenAI 설정
@@ -17,12 +17,18 @@ LOCAL_AI_MODEL_PREF=/models/exaone
 LOCAL_AI_MODEL_TOKEN_LIMIT=4096
 LOCAL_AI_API_KEY=your_local_ai_api_key_here
 
-# AWS Bedrock 설정
+# AWS Bedrock 설정 (Claude Sonnet 3.5)
 AWS_BEDROCK_LLM_ACCESS_KEY_ID=your_aws_access_key_id
 AWS_BEDROCK_LLM_ACCESS_KEY=your_aws_secret_access_key
 AWS_BEDROCK_LLM_REGION=ap-northeast-2
 AWS_BEDROCK_LLM_MODEL_PREFERENCE=anthropic.claude-3-5-sonnet-20240620-v1:0
 AWS_BEDROCK_LLM_MODEL_TOKEN_LIMIT=4096
+
+# ExaOne 설정
+EXAONE_BASE_PATH=http://blue1.novamsg.org:4051/v1
+EXAONE_MODEL_PREF=/models/exaone
+EXAONE_MODEL_TOKEN_LIMIT=4096
+EXAONE_API_KEY=your_exaone_api_key_here
 
 # 파일 경로 설정
 SPAM_LIST_PATH=data/스팸리스트_20250310_개인정보_삭제.xlsx 
