LLM 토큰 가격 정보 추가 및 비용 계산 기능 구현

--- a/.env.example
+++ b/.env.example
@@ -5,30 +5,41 @@ LLM_PROVIDER=openai
 OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_MODEL=gpt-4o
 OPENAI_MODEL_TOKEN_LIMIT=8192
+OPENAI_PRICE_INPUT=5.0
+OPENAI_PRICE_OUTPUT=15.0
 
 # Anthropic 설정
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 ANTHROPIC_MODEL=claude-3-opus-20240229
 ANTHROPIC_MODEL_TOKEN_LIMIT=100000
+ANTHROPIC_PRICE_INPUT=15.0
+ANTHROPIC_PRICE_OUTPUT=75.0
 
 # Local AI 설정
 LOCAL_AI_BASE_PATH=http://localhost:8080/v1
-LOCAL_AI_MODEL_PREF=/models/exaone
+LOCAL_AI_MODEL_PREF=/models/local_model
 LOCAL_AI_MODEL_TOKEN_LIMIT=4096
-LOCAL_AI_API_KEY=your_local_ai_api_key_here
+LOCAL_AI_API_KEY=your_local_ai_api_key
+LOCAL_AI_PRICE_INPUT=0.0
+LOCAL_AI_PRICE_OUTPUT=0.0
 
 # AWS Bedrock 설정 (Claude Sonnet 3.5)
 AWS_BEDROCK_LLM_ACCESS_KEY_ID=your_aws_access_key_id
 AWS_BEDROCK_LLM_ACCESS_KEY=your_aws_secret_access_key
 AWS_BEDROCK_LLM_REGION=ap-northeast-2
 AWS_BEDROCK_LLM_MODEL_PREFERENCE=anthropic.claude-3-5-sonnet-20240620-v1:0
-AWS_BEDROCK_LLM_MODEL_TOKEN_LIMIT=4096
+AWS_BEDROCK_LLM_MODEL_TOKEN_LIMIT=200000
+CLAUDE_BEDROCK_PRICE_INPUT=3.0
+CLAUDE_BEDROCK_PRICE_OUTPUT=15.0
 
 # ExaOne 설정
-EXAONE_BASE_PATH=http://blue1.novamsg.org:4051/v1
+EXAONE_BASE_PATH=http://localhost:8080/v1
 EXAONE_MODEL_PREF=/models/exaone
 EXAONE_MODEL_TOKEN_LIMIT=4096
-EXAONE_API_KEY=your_exaone_api_key_here
+EXAONE_API_KEY=your_exaone_api_key
+EXAONE_PRICE_INPUT=0.0
+EXAONE_PRICE_OUTPUT=0.0
 
 # 파일 경로 설정
-SPAM_LIST_PATH=data/스팸리스트_20250310_개인정보_삭제.xlsx 
+SPAM_LIST_FILE_PATH=./data/spam_list.xlsx
+OUTPUT_FOLDER_PATH=./spam_llm_classification 
